Fixed service_autocomplete CSS issue where z-index was not defined. Set to 1

--- a/core/services/service_autocomplete/css/service_autocomplete.less
+++ b/core/services/service_autocomplete/css/service_autocomplete.less
@@ -19,11 +19,9 @@
 		margin-left: 0px;
 		position: absolute;
 		top: 100%;
-		// width: calc(100% + 1px); // ~"calc(100% + 21px)";
 		width: 100%;
-		// width: calc(100% - 2rem);
-		// min-width: 20rem;
 		min-width: 12rem;
+		z-index: 1;
 
 		// hide wrapper_service_autocomplete when parent element .component_portal is not .active
 		// .wrapper_component:not(.active) & {
